Adding configuration and metadata files to the repository

--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -1,36 +1,76 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <types>
-        <members>*</members>
-        <name>ApexClass</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>ApexComponent</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>ApexPage</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>ApexTestSuite</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>ApexTrigger</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>AuraDefinitionBundle</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>LightningComponentBundle</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>StaticResource</name>
-    </types>
-    <version>63.0</version>
+	<types>
+		<members>https_my_site_com</members>
+		<name>CorsWhitelistOrigin</name>
+	</types>
+	<types>
+		<members>*</members>
+		<name>CspTrustedSite</name>
+	</types>
+	<types>
+		<members>SentimentAnalysisDefinitions__c</members>
+		<name>CustomObject</name>
+	</types>
+	<types>
+		<members>*</members>
+		<name>CustomSite</name>
+	</types>
+	<types>
+		<members>site/ESW_SentimentAnalysis_17443221232321.sfdc_cms__appPage/mainAppPage</members>
+		<members>site/ESW_SentimentAnalysis_17443221232321.sfdc_cms__brandingSet/esw_template_frame_branding</members>
+		<members>site/ESW_SentimentAnalysis_17443221232321.sfdc_cms__languageSettings/languages</members>
+		<members>site/ESW_SentimentAnalysis_17443221232321.sfdc_cms__mobilePublisherConfig/mobilePublisherConfig</members>
+		<members>site/ESW_SentimentAnalysis_17443221232321.sfdc_cms__route/Error</members>
+		<members>site/ESW_SentimentAnalysis_17443221232321.sfdc_cms__route/Home</members>
+		<members>site/ESW_SentimentAnalysis_17443221232321.sfdc_cms__route/News_Detail__c</members>
+		<members>site/ESW_SentimentAnalysis_17443221232321.sfdc_cms__route/Service_Not_Available</members>
+		<members>site/ESW_SentimentAnalysis_17443221232321.sfdc_cms__site/ESW_SentimentAnalysis_17443221232321</members>
+		<members>site/ESW_SentimentAnalysis_17443221232321.sfdc_cms__theme/Embedded_Service_for_Web_LWR</members>
+		<members>site/ESW_SentimentAnalysis_17443221232321.sfdc_cms__themeLayout/frame</members>
+		<members>site/ESW_SentimentAnalysis_17443221232321.sfdc_cms__themeLayout/snaThemeLayout</members>
+		<members>site/ESW_SentimentAnalysis_17443221232321.sfdc_cms__trustedSites/trustedSites</members>
+		<members>site/ESW_SentimentAnalysis_17443221232321.sfdc_cms__view/error</members>
+		<members>site/ESW_SentimentAnalysis_17443221232321.sfdc_cms__view/home</members>
+		<members>site/ESW_SentimentAnalysis_17443221232321.sfdc_cms__view/newsDetail</members>
+		<members>site/ESW_SentimentAnalysis_17443221232321.sfdc_cms__view/serviceNotAvailable</members>
+		<name>DigitalExperience</name>
+	</types>
+	<types>
+		<members>site/ESW_SentimentAnalysis_17443221232321</members>
+		<name>DigitalExperienceBundle</name>
+	</types>
+	<types>
+		<members>SentimentAnalysis</members>
+		<name>EmbeddedServiceConfig</name>
+	</types>
+	<types>
+		<members>SentimentAnalysis</members>
+		<name>GenAiPromptTemplate</name>
+	</types>
+	<types>
+		<members>*</members>
+		<name>LightningComponentBundle</name>
+	</types>
+	<types>
+		<members>MIAW</members>
+		<name>MessagingChannel</name>
+	</types>
+	<types>
+		<members>MessagingUser</members>
+		<name>PermissionSet</name>
+	</types>
+	<types>
+		<members>*</members>
+		<name>Queue</name>
+	</types>
+	<types>
+		<members>*</members>
+		<name>ServicePresenceStatus</name>
+	</types>
+	<types>
+		<members>*</members>
+		<name>SiteDotCom</name>
+	</types>
+	<version>63.0</version>
 </Package>
